# rapido_cdc_stream

./: .gitignore  Dockerfile  Dockerfile.dbt  docker-compose.yml  init.sql  pyproject.toml  rapido_data.py  requirements.txt
apps/: bronze_delta.py  check.py  demo.py  raw_snowflake.py  silver_delta.py  staging_snowflake.py  streaming.py
config/: airflow.cfg
dags/: dbt.py
data/: kafka-debezium-connector.py  rapido_data.py  rides_data.py
dbt_project/: .gitignore  dbt_project.yml
dbt_project/.dbt/: profiles.yml
dbt_project/models/: sources.yml
dbt_project/models/marts/: agg_daily.sql  agg_driver.sql  dim_drivers.sql  dim_riders.sql  fact_rides.sql  obt.sql
dbt_project/models/staging/: stg_drivers.sql  stg_riders.sql  stg_rides.sql
ivy-cache/cache/: resolved-org.apache.spark-spark-submit-parent-36bae1b1-4b62-4b38-b473-9942e4281f2b-1.0.properties  resolved-org.apache.spark-spark-submit-parent-36bae1b1-4b62-4b38-b473-9942e4281f2b-1.0.xml  resolved-org.apache.spark-spark-submit-parent-b940496d-563c-4025-b43d-2b23fdce21c0-1.0.properties  resolved-org.apache.spark-spark-submit-parent-b940496d-563c-4025-b43d-2b23fdce21c0-1.0.xml
ivy-cache/cache/com.amazonaws/aws-java-sdk-bundle/: ivydata-1.12.262.properties
ivy-cache/cache/com.amazonaws/aws-java-sdk-pom/: ivydata-1.12.262.properties
ivy-cache/cache/com.google.code.findbugs/jsr305/: ivydata-3.0.0.properties
ivy-cache/cache/commons-logging/commons-logging/: ivydata-1.1.3.properties
ivy-cache/cache/io.delta/delta-spark_2.12/: ivydata-3.2.0.properties
(+27 files in other folders)
