[project]
name = "rapido"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "delta>=0.4.2",
    "faker>=40.23.0",
    "logging>=0.4.9.6",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "pyspark>=4.1.2",
    "requests>=2.34.2",
]
